# jb

./: README.es.md  README.fr.md  README.md  update_version  update_version.sh  update_version_bsd  update_version_bsd.sh
1.10.0/: Doxyfile  README.md  jb_config.h  jb_win.h
1.12.0/: Doxyfile  README.md  jb_config.h  jb_math.c  jb_win.h
1.12.1/: Doxyfile  jb_def.c  jb_math.h
1.14.0/: Doxyfile  README.md  TODO  jb_config.h  jb_math.c  jb_math.h  jb_win.h  test_math.c
1.14.1/: Doxyfile  README.md  jb_def.h  jb_win.c  jb_win.h
1.14.2/: Doxyfile  fc2i.c  fc2i.h  jb_config.h  jb_def.c  jb_def.h  jb_math.c  jb_math.h  jb_win.c  jb_win.h  jb_xml.c  jb_xml.h  test_math.c  test_win.c
1.16.0/: Doxyfile  jb_def.h  jb_win.c  jb_win.h  test_math.c
1.16.1/: Doxyfile  README.md  jb_math.h  jb_win.h
1.16.2/: Doxyfile  jb_config.h  jb_win.c  jb_win.h  jb_xml.h
1.16.3/: Doxyfile  README.md  jb_config.h  jb_win.c  jb_win.h  jb_xml.c
1.18.0/: Doxyfile  Makefile.in  README.md  configure.ac  jb_config.h  jb_def.h  jb_math.c  jb_math.h  jb_win.c  jb_win.h  jb_xml.c  jb_xml.h
1.18.1/: Doxyfile  Makefile.in  README.md  configure.ac  jb.tag  jb_config.h  jb_def.c  jb_def.h  jb_math.c  jb_math.h  jb_win.c  jb_win.h  jb_xml.c  jb_xml.h
1.18.2/: Doxyfile  Makefile.in  configure.ac  jb.tag  jb_config.h  jb_def.c  jb_def.h  jb_math.c  jb_math.h  jb_win.c  jb_win.h  jb_xml.c  jb_xml.h  test_math.c  test_win.c
1.4.2/: Doxyfile  TODO  fc2i.c  fc2i.h  jb_config.h  jb_def.c  jb_def.h  jb_math.c  jb_math.h  jb_strings.c  jb_strings.h  jb_win.c  jb_win.h  jb_xml.c  jb_xml.h  makefile  test_math.c  test_win.c
1.4.3/: Doxyfile  jb_config.h  jb_math.c  jb_math.h  jb_win.c  jb_win.h  jb_xml.h
1.4.4/: Doxyfile  jb_config.h  jb_math.c  jb_math.h  jb_win.c  jb_win.h  jb_xml.h
1.4.5/: Doxyfile  jb_config.h  jb_def.h  jb_math.c  jb_math.h  jb_xml.c  jb_xml.h  test_math.c
1.6.0/: Doxyfile  jb_config.h  jb_def.h  jb_math.c  jb_math.h  jb_win.c  jb_win.h  makefile
1.6.1/: jb_win.h
1.6.2/: Doxyfile  jb_def.h  jb_win.c  jb_win.h  makefile
1.8.0/: jb_win.c  jb_win.h
1.8.1/: Doxyfile  jb_math.c  jb_win.c  jb_win.h
1.8.10/: Doxyfile  README.md
1.8.2/: Doxyfile  jb_config.h  jb_win.c
1.8.3/: Doxyfile  README.md  jb_math.h  jb_win.h
1.8.4/: Doxyfile  README.md  jb_math.h
1.8.5/: jb_def.h  jb_xml.c
1.8.6/: Doxyfile  README.md  jb_win.h
1.8.7/: Doxyfile  jb_win.c  jb_xml.c
1.8.8/: Doxyfile  README.md  jb_config.h  jb_win.c  jb_win.h  jb_xml.h
1.8.9/: Doxyfile  README.md  jb_def.c  jb_win.h
10.1.0/: Doxyfile  configure.ac
10.11.0/: Doxyfile  configure.ac
10.11.1/: Doxyfile  configure.ac
10.11.10/: Doxyfile  configure.ac
10.11.11/: Doxyfile  configure.ac
10.11.2/: Doxyfile  configure.ac  rat.c
10.11.3/: Doxyfile  build.sh  configure.ac
10.11.4/: Doxyfile  configure.ac
10.11.5/: Doxyfile  configure.ac
10.11.6/: Doxyfile  configure.ac
10.11.7/: Doxyfile  configure.ac
10.11.8/: Doxyfile  configure.ac
10.11.9/: Doxyfile  configure.ac
10.13.0/: Doxyfile  configure.ac
10.13.1/: Doxyfile  configure.ac
10.13.2/: Doxyfile  configure.ac
10.13.3/: Doxyfile  TODO  configure.ac
10.15.0/: Doxyfile  configure.ac
10.15.1/: Doxyfile  configure.ac
10.3.0/: Doxyfile  configure.ac
10.3.1/: Doxyfile  configure.ac
10.5.0/: Doxyfile  Makefile.in  configure.ac
10.7.0/: Doxyfile  Makefile.in  configure.ac
10.9.0/: Doxyfile  configure.ac
11.1.0/: Doxyfile  configure.ac
11.1.1/: Doxyfile  configure.ac
11.1.2/: Doxyfile  Makefile.in  build.sh  configure.ac
11.3.0/: Doxyfile  configure.ac
11.3.1/: Doxyfile  configure.ac
11.3.10/: Doxyfile  Makefile.in  build.sh  configure.ac
11.3.11/: Doxyfile  Makefile.in  configure.ac
11.3.12/: Doxyfile  configure.ac
11.3.13/: Doxyfile  configure.ac
11.3.14/: Doxyfile  configure.ac
11.3.15/: Doxyfile  configure.ac
11.3.15/tests/: configure.ac
11.3.16/: Doxyfile  configure.ac
11.3.17/: Doxyfile  configure.ac
11.3.18/: Doxyfile  configure.ac
11.3.19/: Doxyfile  configure.ac
11.3.2/: Doxyfile  configure.ac
11.3.20/: Doxyfile  configure.ac
11.3.21/: Doxyfile  configure.ac
11.3.22/: Doxyfile  configure.ac
11.3.23/: Doxyfile  configure.ac
11.3.24/: Doxyfile  configure.ac
11.3.25/: Doxyfile  configure.ac
11.3.26/: Doxyfile  configure.ac
11.3.27/: Doxyfile  configure.ac
11.3.28/: Doxyfile  configure.ac
11.3.29/: Doxyfile  configure.ac
11.3.3/: Doxyfile  configure.ac
11.3.30/: Doxyfile  configure.ac
11.3.4/: Doxyfile  configure.ac
11.3.5/: Doxyfile  configure.ac
11.3.6/: Doxyfile  configure.ac
11.3.8/: Doxyfile  configure.ac
11.3.9/: Doxyfile  configure.ac
12.1.0/: Doxyfile  configure.ac
12.1.1/: Doxyfile  configure.ac
12.1.10/: Doxyfile  configure.ac
12.1.11/: Doxyfile  configure.ac  issues
12.1.12/: Doxyfile  configure.ac
12.1.13/: Doxyfile  configure.ac
12.1.14/: Doxyfile  configure.ac
12.1.15/: Doxyfile  configure.ac
12.1.16/: Doxyfile  configure.ac
12.1.17/: Doxyfile  configure.ac
12.1.2/: Doxyfile  configure.ac
12.1.3/: Doxyfile  configure.ac
12.1.4/: Doxyfile  Makefile.in  configure.ac
12.1.5/: Doxyfile  configure.ac
12.1.6/: Doxyfile  configure.ac
12.1.7/: Doxyfile  (+1 more)
2.0.0/: Makefile.in  TODO  config.h  configure.ac  jb.tag  jb_def.h  jb_win.h
2.0.0/locale/es/LC_MESSAGES/: jb.po
2.4.2/: Doxyfile  Makefile.in  TODO  build.sh  configure.ac  jb_win.c  jb_win.h  test_math.c  test_xml.c
2.4.2/locale/es/LC_MESSAGES/: jb.po
2.4.2/locale/fr/LC_MESSAGES/: jb.po
2.4.2/locale/it/LC_MESSAGES/: jb.po
2.4.2/tests/: Makefile.in
3.1.2/: Doxyfile  configure.ac
3.1.2/locale/es/LC_MESSAGES/: jb.po
3.1.2/locale/fr/LC_MESSAGES/: jb.po
3.1.2/locale/it/LC_MESSAGES/: jb.po
3.1.2/src/: jb_config.h  jb_def.h  jb_math.c  jb_math.h  jb_win.c  jb_xml.h  test_win.c
4.3.3/: Doxyfile  Makefile.in  configure.ac
4.3.3/locale/es/LC_MESSAGES/: jb.po
4.3.3/locale/fr/LC_MESSAGES/: jb.po
4.3.3/locale/it/LC_MESSAGES/: jb.po
4.3.3/src/: config.h.in  jb_json.h  jb_math.h  jb_win.c  jb_win.h  jb_xml.h
4.3.3/tests/: test_win.c  test_xml.c
(+1300 files in other folders)
